@@ -1,3 +1,9 @@
+Fri Jul 17 14:36:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>
+
+        * apps/JAWS/server/HTTP_Response.cpp:
+        * apps/JAWS/server/JAWS_IO.cpp:
+          Resolved UNICODE compiler errors.
+
 Wed Jul 15 14:43:33 UTC 2009  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * apps/gperf/src/gperf.mpc:
